@@ -44,26 +44,21 @@ import org.springframework.test.util.ReflectionTestUtils;
 @ExtendWith(MockitoExtension.class)
 class HuaweiCloudOrchestratorPluginTest {
 
-    @Mock
-    private HuaweiCloudMetricsService mockHuaweiCloudMetricsService;
-    @Mock
-    private HuaweiCloudVmStateManager mockHuaweiCloudVmStateManager;
-    @Mock
-    private HuaweiCloudTerraformResourceHandler mockHuaweiCloudTerraformResourceHandler;
+    @Mock private HuaweiCloudMetricsService mockHuaweiCloudMetricsService;
+    @Mock private HuaweiCloudVmStateManager mockHuaweiCloudVmStateManager;
+    @Mock private HuaweiCloudTerraformResourceHandler mockHuaweiCloudTerraformResourceHandler;
 
-    @InjectMocks
-    private HuaweiCloudOrchestratorPlugin plugin;
+    @InjectMocks private HuaweiCloudOrchestratorPlugin plugin;
 
     @BeforeEach
     void setUp() {
-        ReflectionTestUtils.setField(plugin,
-                "autoApproveServiceTemplateEnabled", false);
+        ReflectionTestUtils.setField(plugin, "autoApproveServiceTemplateEnabled", false);
     }
 
     @Test
     void testGetResourceHandler() {
-        assertThat(plugin.resourceHandlers()
-                .get(DeployerKind.TERRAFORM)).isEqualTo(mockHuaweiCloudTerraformResourceHandler);
+        assertThat(plugin.resourceHandlers().get(DeployerKind.TERRAFORM))
+                .isEqualTo(mockHuaweiCloudTerraformResourceHandler);
     }
 
     @Test
@@ -73,16 +68,14 @@ class HuaweiCloudOrchestratorPluginTest {
 
     @Test
     void testRequiredProperties() {
-        assertThat(plugin.requiredProperties()).isEqualTo(
-                Collections.emptyList());
+        assertThat(plugin.requiredProperties()).isEqualTo(Collections.emptyList());
     }
 
     @Test
     void testGetEnvVarKeysMappingMap() {
         // Setup
         // Run the test
-        final Map<String, String> result =
-                plugin.getEnvVarKeysMappingMap();
+        final Map<String, String> result = plugin.getEnvVarKeysMappingMap();
 
         // Verify the results
         assertTrue(result.isEmpty());
@@ -90,16 +83,15 @@ class HuaweiCloudOrchestratorPluginTest {
 
     @Test
     void testGetAvailableCredentialTypes() {
-        assertThat(plugin.getAvailableCredentialTypes()).isEqualTo(
-                List.of(CredentialType.VARIABLES));
+        assertThat(plugin.getAvailableCredentialTypes())
+                .isEqualTo(List.of(CredentialType.VARIABLES));
     }
 
     @Test
     void testGetCredentialDefinitions() {
         // Setup
         // Run the test
-        final List<AbstractCredentialInfo> result =
-                plugin.getCredentialDefinitions();
+        final List<AbstractCredentialInfo> result = plugin.getCredentialDefinitions();
 
         // Verify the results
         assertFalse(result.isEmpty());
@@ -113,9 +105,11 @@ class HuaweiCloudOrchestratorPluginTest {
     @Test
     void testGetSites() {
         // Setup
-        List<String> exceptedSites = List.of(HuaweiCloudConstants.INTERNATIONAL_SITE,
-                HuaweiCloudConstants.CHINESE_MAINLAND_SITE,
-                HuaweiCloudConstants.EUROPE_SITE);
+        List<String> exceptedSites =
+                List.of(
+                        HuaweiCloudConstants.INTERNATIONAL_SITE,
+                        HuaweiCloudConstants.CHINESE_MAINLAND_SITE,
+                        HuaweiCloudConstants.EUROPE_SITE);
         // Run the test
         final List<String> result = plugin.getSites();
         // Verify the results
@@ -164,9 +158,17 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource.setResourceName("name");
         deployResource.setResourceKind(DeployResourceKind.VM);
         deployResource.setProperties(Map.ofEntries(Map.entry("value", "value")));
-        final ResourceMetricsRequest resourceMetricRequest = new ResourceMetricsRequest(
-                serviceId, region, deployResource, MonitorResourceType.CPU, 0L, 0L, 0, false,
-                "userId");
+        final ResourceMetricsRequest resourceMetricRequest =
+                new ResourceMetricsRequest(
+                        serviceId,
+                        region,
+                        deployResource,
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
         final Metric metric = new Metric();
         metric.setName("name");
         metric.setDescription("description");
@@ -189,15 +191,21 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource1.setResourceKind(DeployResourceKind.VM);
         deployResource1.setProperties(Map.ofEntries(Map.entry("value", "value")));
         final ResourceMetricsRequest resourceMetricRequest1 =
-                new ResourceMetricsRequest(serviceId, region, deployResource1,
-                        MonitorResourceType.CPU, 0L,
-                        0L, 0, false, "userId");
-        when(mockHuaweiCloudMetricsService.getMetricsByResource(resourceMetricRequest1)).thenReturn(
-                metrics);
+                new ResourceMetricsRequest(
+                        serviceId,
+                        region,
+                        deployResource1,
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
+        when(mockHuaweiCloudMetricsService.getMetricsByResource(resourceMetricRequest1))
+                .thenReturn(metrics);
 
         // Run the test
-        final List<Metric> result =
-                plugin.getMetricsForResource(resourceMetricRequest);
+        final List<Metric> result = plugin.getMetricsForResource(resourceMetricRequest);
 
         // Verify the results
         assertThat(result).isEqualTo(expectedResult);
@@ -216,9 +224,17 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource.setResourceName("name");
         deployResource.setResourceKind(DeployResourceKind.VM);
         deployResource.setProperties(Map.ofEntries(Map.entry("value", "value")));
-        final ResourceMetricsRequest resourceMetricRequest = new ResourceMetricsRequest(
-                serviceId, region, deployResource, MonitorResourceType.CPU,
-                0L, 0L, 0, false, "userId");
+        final ResourceMetricsRequest resourceMetricRequest =
+                new ResourceMetricsRequest(
+                        serviceId,
+                        region,
+                        deployResource,
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
 
         // Configure HuaweiCloudMetricsService.getMetricsByResource(...).
         final DeployResource deployResource1 = new DeployResource();
@@ -226,15 +242,22 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource1.setResourceName("name");
         deployResource1.setResourceKind(DeployResourceKind.VM);
         deployResource1.setProperties(Map.ofEntries(Map.entry("value", "value")));
-        final ResourceMetricsRequest resourceMetricRequest1 = new ResourceMetricsRequest(
-                serviceId, region, deployResource1, MonitorResourceType.CPU, 0L,
-                0L, 0, false, "userId");
-        when(mockHuaweiCloudMetricsService.getMetricsByResource(resourceMetricRequest1)).thenReturn(
-                Collections.emptyList());
+        final ResourceMetricsRequest resourceMetricRequest1 =
+                new ResourceMetricsRequest(
+                        serviceId,
+                        region,
+                        deployResource1,
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
+        when(mockHuaweiCloudMetricsService.getMetricsByResource(resourceMetricRequest1))
+                .thenReturn(Collections.emptyList());
 
         // Run the test
-        final List<Metric> result =
-                plugin.getMetricsForResource(resourceMetricRequest);
+        final List<Metric> result = plugin.getMetricsForResource(resourceMetricRequest);
 
         // Verify the results
         assertThat(result).isEqualTo(Collections.emptyList());
@@ -254,8 +277,16 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource.setResourceKind(DeployResourceKind.VM);
         deployResource.setProperties(Map.ofEntries(Map.entry("value", "value")));
         final ServiceMetricsRequest serviceMetricRequest =
-                new ServiceMetricsRequest(serviceId, region, List.of(deployResource),
-                        MonitorResourceType.CPU, 0L, 0L, 0, false, "userId");
+                new ServiceMetricsRequest(
+                        serviceId,
+                        region,
+                        List.of(deployResource),
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
         final Metric metric = new Metric();
         metric.setName("name");
         metric.setDescription("description");
@@ -278,14 +309,21 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource1.setResourceKind(DeployResourceKind.VM);
         deployResource1.setProperties(Map.ofEntries(Map.entry("value", "value")));
         final ServiceMetricsRequest serviceMetricRequest1 =
-                new ServiceMetricsRequest(serviceId, region, List.of(deployResource1),
-                        MonitorResourceType.CPU, 0L, 0L, 0, false, "userId");
-        when(mockHuaweiCloudMetricsService.getMetricsByService(serviceMetricRequest1)).thenReturn(
-                metrics);
+                new ServiceMetricsRequest(
+                        serviceId,
+                        region,
+                        List.of(deployResource1),
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
+        when(mockHuaweiCloudMetricsService.getMetricsByService(serviceMetricRequest1))
+                .thenReturn(metrics);
 
         // Run the test
-        final List<Metric> result =
-                plugin.getMetricsForService(serviceMetricRequest);
+        final List<Metric> result = plugin.getMetricsForService(serviceMetricRequest);
 
         // Verify the results
         assertThat(result).isEqualTo(expectedResult);
@@ -305,8 +343,16 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource.setResourceKind(DeployResourceKind.VM);
         deployResource.setProperties(Map.ofEntries(Map.entry("value", "value")));
         final ServiceMetricsRequest serviceMetricRequest =
-                new ServiceMetricsRequest(serviceId, region, List.of(deployResource),
-                        MonitorResourceType.CPU, 0L, 0L, 0, false, "userId");
+                new ServiceMetricsRequest(
+                        serviceId,
+                        region,
+                        List.of(deployResource),
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
 
         // Configure HuaweiCloudMetricsService.getMetricsByService(...).
         final DeployResource deployResource1 = new DeployResource();
@@ -315,14 +361,21 @@ class HuaweiCloudOrchestratorPluginTest {
         deployResource1.setResourceKind(DeployResourceKind.VM);
         deployResource1.setProperties(Map.ofEntries(Map.entry("value", "value")));
         final ServiceMetricsRequest serviceMetricRequest1 =
-                new ServiceMetricsRequest(serviceId, region, List.of(deployResource1),
-                        MonitorResourceType.CPU, 0L, 0L, 0, false, "userId");
-        when(mockHuaweiCloudMetricsService.getMetricsByService(serviceMetricRequest1)).thenReturn(
-                Collections.emptyList());
+                new ServiceMetricsRequest(
+                        serviceId,
+                        region,
+                        List.of(deployResource1),
+                        MonitorResourceType.CPU,
+                        0L,
+                        0L,
+                        0,
+                        false,
+                        "userId");
+        when(mockHuaweiCloudMetricsService.getMetricsByService(serviceMetricRequest1))
+                .thenReturn(Collections.emptyList());
 
         // Run the test
-        final List<Metric> result =
-                plugin.getMetricsForService(serviceMetricRequest);
+        final List<Metric> result = plugin.getMetricsForService(serviceMetricRequest);
 
         // Verify the results
         assertThat(result).isEqualTo(Collections.emptyList());
@@ -352,12 +405,11 @@ class HuaweiCloudOrchestratorPluginTest {
         serviceResourceEntity1.setId(UUID.fromString("06e10d9a-d32c-432e-94a2-d4bf4af17ee6"));
         serviceResourceEntity1.setResourceId("resourceId");
         serviceStateManageRequest1.setServiceResourceEntityList(List.of(serviceResourceEntity1));
-        when(mockHuaweiCloudVmStateManager.startService(serviceStateManageRequest1)).thenReturn(
-                false);
+        when(mockHuaweiCloudVmStateManager.startService(serviceStateManageRequest1))
+                .thenReturn(false);
 
         // Run the test
-        final boolean result =
-                plugin.startService(serviceStateManageRequest);
+        final boolean result = plugin.startService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isFalse();
@@ -387,12 +439,11 @@ class HuaweiCloudOrchestratorPluginTest {
         serviceResourceEntity1.setId(UUID.fromString("06e10d9a-d32c-432e-94a2-d4bf4af17ee6"));
         serviceResourceEntity1.setResourceId("resourceId");
         serviceStateManageRequest1.setServiceResourceEntityList(List.of(serviceResourceEntity1));
-        when(mockHuaweiCloudVmStateManager.startService(serviceStateManageRequest1)).thenReturn(
-                true);
+        when(mockHuaweiCloudVmStateManager.startService(serviceStateManageRequest1))
+                .thenReturn(true);
 
         // Run the test
-        final boolean result =
-                plugin.startService(serviceStateManageRequest);
+        final boolean result = plugin.startService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isTrue();
@@ -422,12 +473,11 @@ class HuaweiCloudOrchestratorPluginTest {
         serviceResourceEntity1.setId(UUID.fromString("06e10d9a-d32c-432e-94a2-d4bf4af17ee6"));
         serviceResourceEntity1.setResourceId("resourceId");
         serviceStateManageRequest1.setServiceResourceEntityList(List.of(serviceResourceEntity1));
-        when(mockHuaweiCloudVmStateManager.stopService(serviceStateManageRequest1)).thenReturn(
-                false);
+        when(mockHuaweiCloudVmStateManager.stopService(serviceStateManageRequest1))
+                .thenReturn(false);
 
         // Run the test
-        final boolean result =
-                plugin.stopService(serviceStateManageRequest);
+        final boolean result = plugin.stopService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isFalse();
@@ -457,12 +507,11 @@ class HuaweiCloudOrchestratorPluginTest {
         serviceResourceEntity1.setId(UUID.fromString("06e10d9a-d32c-432e-94a2-d4bf4af17ee6"));
         serviceResourceEntity1.setResourceId("resourceId");
         serviceStateManageRequest1.setServiceResourceEntityList(List.of(serviceResourceEntity1));
-        when(mockHuaweiCloudVmStateManager.stopService(serviceStateManageRequest1)).thenReturn(
-                true);
+        when(mockHuaweiCloudVmStateManager.stopService(serviceStateManageRequest1))
+                .thenReturn(true);
 
         // Run the test
-        final boolean result =
-                plugin.stopService(serviceStateManageRequest);
+        final boolean result = plugin.stopService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isTrue();
@@ -492,12 +541,11 @@ class HuaweiCloudOrchestratorPluginTest {
         serviceResourceEntity1.setId(UUID.fromString("06e10d9a-d32c-432e-94a2-d4bf4af17ee6"));
         serviceResourceEntity1.setResourceId("resourceId");
         serviceStateManageRequest1.setServiceResourceEntityList(List.of(serviceResourceEntity1));
-        when(mockHuaweiCloudVmStateManager.restartService(serviceStateManageRequest1)).thenReturn(
-                false);
+        when(mockHuaweiCloudVmStateManager.restartService(serviceStateManageRequest1))
+                .thenReturn(false);
 
         // Run the test
-        final boolean result =
-                plugin.restartService(serviceStateManageRequest);
+        final boolean result = plugin.restartService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isFalse();
@@ -527,12 +575,11 @@ class HuaweiCloudOrchestratorPluginTest {
         serviceResourceEntity1.setId(UUID.fromString("06e10d9a-d32c-432e-94a2-d4bf4af17ee6"));
         serviceResourceEntity1.setResourceId("resourceId");
         serviceStateManageRequest1.setServiceResourceEntityList(List.of(serviceResourceEntity1));
-        when(mockHuaweiCloudVmStateManager.restartService(serviceStateManageRequest1)).thenReturn(
-                true);
+        when(mockHuaweiCloudVmStateManager.restartService(serviceStateManageRequest1))
+                .thenReturn(true);
 
         // Run the test
-        final boolean result =
-                plugin.restartService(serviceStateManageRequest);
+        final boolean result = plugin.restartService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isTrue();
