@@ -59,26 +59,18 @@ class PlusServerOrchestratorPluginTest {
     private final String siteName = "default";
     private final String regionName = "RegionOne";
     private final UUID uuid = UUID.randomUUID();
-    @Mock
-    private OpenstackTerraformResourceHandler mockTerraformResourceHandler;
-    @Mock
-    private OpenstackServersManager mockServersManager;
-    @Mock
-    private OpenstackResourceManager mockResourceManager;
-    @Mock
-    private OpenstackServicePriceCalculator mockPricingCalculator;
-    @Mock
-    private ProviderAuthInfoResolver mockProviderAuthInfoResolver;
-    @Mock
-    private Environment mockEnvironment;
+    @Mock private OpenstackTerraformResourceHandler mockTerraformResourceHandler;
+    @Mock private OpenstackServersManager mockServersManager;
+    @Mock private OpenstackResourceManager mockResourceManager;
+    @Mock private OpenstackServicePriceCalculator mockPricingCalculator;
+    @Mock private ProviderAuthInfoResolver mockProviderAuthInfoResolver;
+    @Mock private Environment mockEnvironment;
 
-    @InjectMocks
-    private PlusServerOrchestratorPlugin plugin;
+    @InjectMocks private PlusServerOrchestratorPlugin plugin;
 
     @BeforeEach
     void setUp() {
-        ReflectionTestUtils.setField(plugin,
-                "autoApproveServiceTemplateEnabled", false);
+        ReflectionTestUtils.setField(plugin, "autoApproveServiceTemplateEnabled", false);
     }
 
     @Test
@@ -110,12 +102,12 @@ class PlusServerOrchestratorPluginTest {
     void testResourceHandlers() {
         // Setup
         // Run the test
-        final Map<DeployerKind, DeployResourceHandler> result =
-                plugin.resourceHandlers();
+        final Map<DeployerKind, DeployResourceHandler> result = plugin.resourceHandlers();
         // Verify the results
-        result.forEach((key, value) -> {
-            assertThat(value).isInstanceOf(OpenstackTerraformResourceHandler.class);
-        });
+        result.forEach(
+                (key, value) -> {
+                    assertThat(value).isInstanceOf(OpenstackTerraformResourceHandler.class);
+                });
     }
 
     @Test
@@ -128,8 +120,7 @@ class PlusServerOrchestratorPluginTest {
     void testGetCredentialDefinitions() {
         // Setup
         // Run the test
-        final List<AbstractCredentialInfo> result =
-                plugin.getCredentialDefinitions();
+        final List<AbstractCredentialInfo> result = plugin.getCredentialDefinitions();
         // Verify the results
         assertThat(result).isNotEmpty();
         assertThat(result.getFirst().getCsp()).isEqualTo(csp);
@@ -178,12 +169,13 @@ class PlusServerOrchestratorPluginTest {
     void testGetExistingResourceNamesWithKind() {
         // Setup
         when(mockResourceManager.getExistingResourceNamesWithKind(
-                csp, siteName, regionName, userId, DeployResourceKind.VM, uuid))
+                        csp, siteName, regionName, userId, DeployResourceKind.VM, uuid))
                 .thenReturn(List.of("value"));
 
         // Run the test
-        final List<String> result = plugin.getExistingResourceNamesWithKind(
-                siteName, regionName, userId, DeployResourceKind.VM, uuid);
+        final List<String> result =
+                plugin.getExistingResourceNamesWithKind(
+                        siteName, regionName, userId, DeployResourceKind.VM, uuid);
 
         // Verify the results
         assertThat(result).isEqualTo(List.of("value"));
@@ -193,12 +185,13 @@ class PlusServerOrchestratorPluginTest {
     void testGetExistingResourceNamesWithKind_OpenstackResourceManagerReturnsNoItems() {
         // Setup
         when(mockResourceManager.getExistingResourceNamesWithKind(
-                csp, siteName, regionName, userId, DeployResourceKind.VM, uuid))
+                        csp, siteName, regionName, userId, DeployResourceKind.VM, uuid))
                 .thenReturn(Collections.emptyList());
 
         // Run the test
-        final List<String> result = plugin.getExistingResourceNamesWithKind(
-                siteName, regionName, userId, DeployResourceKind.VM, uuid);
+        final List<String> result =
+                plugin.getExistingResourceNamesWithKind(
+                        siteName, regionName, userId, DeployResourceKind.VM, uuid);
 
         // Verify the results
         assertThat(result).isEqualTo(Collections.emptyList());
@@ -208,12 +201,12 @@ class PlusServerOrchestratorPluginTest {
     void testGetAvailabilityZonesOfRegion() {
         // Setup
         when(mockResourceManager.getAvailabilityZonesOfRegion(
-                csp, siteName, regionName, userId, uuid, null))
+                        csp, siteName, regionName, userId, uuid, null))
                 .thenReturn(List.of("value"));
 
         // Run the test
-        final List<String> result = plugin.getAvailabilityZonesOfRegion(
-                siteName, regionName, userId, uuid, null);
+        final List<String> result =
+                plugin.getAvailabilityZonesOfRegion(siteName, regionName, userId, uuid, null);
 
         // Verify the results
         assertThat(result).isEqualTo(List.of("value"));
@@ -222,8 +215,8 @@ class PlusServerOrchestratorPluginTest {
     @Test
     void testGetAvailabilityZonesOfRegion_OpenstackResourceManagerReturnsNoItems() {
         // Setup
-        when(mockResourceManager.getAvailabilityZonesOfRegion(csp, siteName, regionName, userId,
-                uuid, null))
+        when(mockResourceManager.getAvailabilityZonesOfRegion(
+                        csp, siteName, regionName, userId, uuid, null))
                 .thenReturn(Collections.emptyList());
 
         // Run the test
@@ -236,16 +229,36 @@ class PlusServerOrchestratorPluginTest {
 
     @Test
     void testGetMetricsForResource() {
-        assertThat(plugin.getMetricsForResource(new ResourceMetricsRequest(uuid, getRegion(),
-                new DeployResource(), MonitorResourceType.CPU, 0L, 0L, 0, false,
-                userId))).isEqualTo(Collections.emptyList());
+        assertThat(
+                        plugin.getMetricsForResource(
+                                new ResourceMetricsRequest(
+                                        uuid,
+                                        getRegion(),
+                                        new DeployResource(),
+                                        MonitorResourceType.CPU,
+                                        0L,
+                                        0L,
+                                        0,
+                                        false,
+                                        userId)))
+                .isEqualTo(Collections.emptyList());
     }
 
     @Test
     void testGetMetricsForService() {
-        assertThat(plugin.getMetricsForService(new ServiceMetricsRequest(uuid, getRegion(),
-                List.of(new DeployResource()), MonitorResourceType.CPU, 0L, 0L, 0, false,
-                userId))).isEqualTo(Collections.emptyList());
+        assertThat(
+                        plugin.getMetricsForService(
+                                new ServiceMetricsRequest(
+                                        uuid,
+                                        getRegion(),
+                                        List.of(new DeployResource()),
+                                        MonitorResourceType.CPU,
+                                        0L,
+                                        0L,
+                                        0,
+                                        false,
+                                        userId)))
+                .isEqualTo(Collections.emptyList());
     }
 
     @Test
@@ -270,8 +283,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockServersManager.startService(csp, request)).thenReturn(false);
 
         // Run the test
-        final boolean result =
-                plugin.startService(serviceStateManageRequest);
+        final boolean result = plugin.startService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isFalse();
@@ -299,8 +311,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockServersManager.startService(csp, request)).thenReturn(true);
 
         // Run the test
-        final boolean result =
-                plugin.startService(serviceStateManageRequest);
+        final boolean result = plugin.startService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isTrue();
@@ -328,8 +339,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockServersManager.stopService(csp, request)).thenReturn(false);
 
         // Run the test
-        final boolean result =
-                plugin.stopService(serviceStateManageRequest);
+        final boolean result = plugin.stopService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isFalse();
@@ -357,8 +367,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockServersManager.stopService(csp, request)).thenReturn(true);
 
         // Run the test
-        final boolean result =
-                plugin.stopService(serviceStateManageRequest);
+        final boolean result = plugin.stopService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isTrue();
@@ -386,8 +395,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockServersManager.restartService(csp, request)).thenReturn(false);
 
         // Run the test
-        final boolean result =
-                plugin.restartService(serviceStateManageRequest);
+        final boolean result = plugin.restartService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isFalse();
@@ -415,8 +423,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockServersManager.restartService(csp, request)).thenReturn(true);
 
         // Run the test
-        final boolean result =
-                plugin.restartService(serviceStateManageRequest);
+        final boolean result = plugin.restartService(serviceStateManageRequest);
 
         // Verify the results
         assertThat(result).isTrue();
@@ -477,8 +484,7 @@ class PlusServerOrchestratorPluginTest {
         when(mockPricingCalculator.getServiceFlavorPrice(request1)).thenReturn(flavorPriceResult);
 
         // Run the test
-        final FlavorPriceResult result =
-                plugin.getServiceFlavorPrice(request);
+        final FlavorPriceResult result = plugin.getServiceFlavorPrice(request);
 
         // Verify the results
         assertThat(result).isEqualTo(expectedResult);
